<resources>
    <string name="app_name">Activity Lifcycle Playground</string>
    <string name="exit_activity">Exit Activity</string>
    <string name="open_a_non_full_screen_activity">Open A non full-screen activity</string>
    <string name="please_enter_message">Please enter message</string>
    <string name="leave_app">Leave App ?</string>
    <string name="warning_icon">warning icon</string>
    <string name="save_changes">Save changes</string>
    <string name="your_message">Your message: %1$s</string>
    <string name="show_fragment">Show fragment</string>
    <string name="remove_fragment">Remove fragment</string>
</resources>